[gd_scene load_steps=12 format=3 uid="uid://b3q7me2e1bhd5"]

[ext_resource type="Script" path="res://scenes/creatures/bone_wall.gd" id="1_1hbrv"]
[ext_resource type="Texture2D" uid="uid://bvkytstr2te3n" path="res://assets/creatures/blank.png" id="1_14urr"]
[ext_resource type="Texture2D" uid="uid://yj6g2xd6mjtc" path="res://assets/bonewall.png" id="1_odfcy"]
[ext_resource type="PackedScene" uid="uid://t0raixkbvbm1" path="res://scenes/creatures/damage_area.tscn" id="2_2qchr"]
[ext_resource type="PackedScene" uid="uid://dmx2y8wut8vc2" path="res://scenes/levels/breakable_tile.tscn" id="3_kmavw"]
[ext_resource type="Texture2D" uid="uid://cqiksaji3x2wf" path="res://assets/particles/dust.png" id="6_mij7s"]
[ext_resource type="Texture2D" uid="uid://btrwnawvfvnvs" path="res://assets/particles/bone.png" id="7_egir8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_r4otl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mmm7"]
resource_local_to_scene = true
size = Vector2(7, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ixfw"]
resource_local_to_scene = true
size = Vector2(12, 50)

[sub_resource type="Gradient" id="Gradient_7kq57"]
colors = PackedColorArray(1, 1, 1, 0.709804, 1, 1, 1, 0.160784)

[node name="BoneWall" type="Node2D"]
material = SubResource("CanvasItemMaterial_r4otl")
script = ExtResource("1_1hbrv")

[node name="Mask" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(1, -32)
texture = ExtResource("1_14urr")

[node name="Sprite2D" type="Sprite2D" parent="Mask"]
texture = ExtResource("1_odfcy")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="Damage1" type="Sprite2D" parent="Mask"]
position = Vector2(-1, 0)
texture = ExtResource("1_odfcy")
region_enabled = true
region_rect = Rect2(0, 64, 64, 64)

[node name="Damage2" type="Sprite2D" parent="Mask"]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("1_odfcy")
region_enabled = true
region_rect = Rect2(0, 128, 64, 64)

[node name="Damage3" type="Sprite2D" parent="Mask"]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("1_odfcy")
region_enabled = true
region_rect = Rect2(0, 192, 64, 64)

[node name="DamageArea" parent="." instance=ExtResource("2_2qchr")]
damage = 10

[node name="CollisionShape2D" parent="DamageArea" index="0"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_6mmm7")

[node name="BreakableTile" parent="." instance=ExtResource("3_kmavw")]

[node name="CollisionShape2D" parent="BreakableTile" index="0"]
position = Vector2(0, -26)
shape = SubResource("RectangleShape2D_7ixfw")
debug_color = Color(0.384314, 0.607843, 0.207843, 0.419608)

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -1)
emitting = false
amount = 30
lifetime = 3.0
speed_scale = 2.0
texture = ExtResource("6_mij7s")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
spread = 40.0
gravity = Vector2(0, 10)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = 90.0
angular_velocity_max = 120.0
damping_min = 2.0
damping_max = 4.0
scale_amount_min = 0.3
scale_amount_max = 0.5
color_ramp = SubResource("Gradient_7kq57")

[node name="BoneParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 3.0
speed_scale = 2.0
texture = ExtResource("7_egir8")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
spread = 60.0
gravity = Vector2(0, 10)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
angular_velocity_min = 90.0
angular_velocity_max = 120.0
damping_min = 2.0
damping_max = 4.0
scale_amount_min = 0.5
scale_amount_max = 0.8
color_ramp = SubResource("Gradient_7kq57")

[editable path="DamageArea"]
[editable path="BreakableTile"]
